--- a/3d_story_creator/index.html
+++ b/3d_story_creator/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tooltip and Camera Recording</title>
+    <title>Interactive 3D Story Creator</title>
     <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
     <script src="post-processing.js"></script>
     <script src="transform-controls.js"></script>
