--- a/3d_story_creator/index2.html
+++ b/3d_story_creator/index2.html
@@ -12,6 +12,9 @@
     <script src="https://unpkg.com/aframe-troika-text/dist/aframe-troika-text.min.js"></script>
 
     <style>
+        #tooltip-panel > label {
+            font-size: 16px;
+        }
         .input-row {
             display: flex;
             gap: 10px;
@@ -56,6 +59,7 @@
 
 
         .panel input,
+        textarea,
         .panel select {
             width: 250px;
             margin: 10px 0;
@@ -108,6 +112,56 @@
             background-color: #0056b3;
         }
 
+
+        .button-container {
+            display: flex;
+            /* Arrange buttons in a row */
+            gap: 10px;
+            /* Space between buttons */
+            margin: 10px 0;
+            /* Add some margin for spacing */
+        }
+
+        .button-container button {
+            padding: 10px 20px;
+            /* Consistent padding for all buttons */
+            font-size: 16px;
+            /* Adjust font size */
+            border: none;
+            /* Remove default border */
+            border-radius: 5px;
+            /* Add rounded corners */
+            cursor: pointer;
+            /* Add pointer cursor on hover */
+            background-color: #007bff;
+            /* Default button color */
+            color: white;
+            /* Text color */
+            transition: background-color 0.3s ease;
+            /* Smooth hover effect */
+            margin: 0;
+            /* Reset margins to ensure consistent height */
+        }
+
+        .button-container button:hover {
+            background-color: #0056b3;
+            /* Darker color on hover */
+        }
+
+        #deleteButton {
+            background-color: #dc3545;
+            /* Red color for delete button */
+        }
+
+        #deleteButton:hover {
+            background-color: #c82333;
+            /* Darker red on hover */
+        }
+
+
+
+
+
         /* A-Frame scene styling */
         a-scene {
             position: fixed;
@@ -117,15 +171,18 @@
             height: 100vh;
         }
 
-        #deleteButton {
-            margin-top: 10px;
-            margin-bottom: 40px;
-        }
+
 
         /* Start Recording button */
         #startButton {
             background-color: #4CAF50;
             margin-top: 10px;
+        }
+
+
+        #startButton:hover {
+            background-color: #45a049;
+            /* Darker green on hover */
         }
 
         /* End Recording button */
@@ -204,7 +261,7 @@
             /* Hover effect */
         }
 
-        .transform-icon svg {
+        .transform-icon img {
             fill: #333;
             /* Icon color */
             width: 24px;
@@ -266,6 +323,76 @@
         .text-overlay.hidden {
             bottom: -100px;
             opacity: 0;
+        }
+
+
+        /* Text align */
+        .align-icons {
+            display: flex;
+            gap: 10px;
+            /* Space between icons */
+            margin: 10px 0;
+        }
+
+        .align-icon {
+            cursor: pointer;
+            padding: 8px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            transition: background-color 0.3s ease;
+        }
+
+        .align-icon:hover {
+            background-color: #f0f0f0;
+            /* Hover effect */
+        }
+
+        .align-icon img {
+            width: 24px;
+            /* Adjust icon size */
+            height: 24px;
+        }
+
+        /* Font other */
+
+        #font-other {
+            display: flex;
+            /* Arrange input groups in a row */
+            gap: 10px;
+            /* Space between input groups */
+            margin: 10px 0;
+            /* Add some margin for spacing */
+        }
+
+        #font-other2 {
+            display: flex;
+            /* Arrange input groups in a row */
+            gap: 10px;
+            /* Space between input groups */
+            margin: 10px 0;
+            /* Add some margin for spacing */
+        }
+
+        .input-group {
+            display: flex;
+            flex-direction: column;
+            /* Stack label and input vertically */
+            align-items: flex-start;
+            /* Align items to the left */
+        }
+
+        .input-group label {
+            font-size: 16px;
+            /* Adjust label font size */
+        }
+
+        .input-group input {
+            width: 60px;
+            /* Adjust input width as needed */
+            padding: 8px;
+            font-size: 14px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
         }
     </style>
 
@@ -1126,6 +1253,9 @@
             }
 
         });
+
+
+
     </script>
 </head>
 
@@ -1134,60 +1264,25 @@
         <!-- WASD Icon -->
         <div class="transform-controls">
             <div id="wasd" class="transform-icon" title="WASD">
-                <?xml version="1.0" encoding="utf-8"?>
-                <svg fill="#000000" width="800px" height="800px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M20 7h-3V4c0-1.103-.897-2-2-2H9c-1.103 0-2 .897-2 2v3H4c-1.103 0-2 .897-2 2v6c0 1.103.897 2 2 2h3v3c0 1.103.897 2 2 2h6c1.103 0 2-.897 2-2v-3h3c1.103 0 2-.897 2-2V9c0-1.103-.897-2-2-2zm0 8h-5v4h.001v1H9v-5H4V9h5V4h6v5h5v6z" />
-                    <path d="M8 14v-4l-3 2zm8 0 3-2-3-2zm-6-6h4l-2-3zm2 11 2-3h-4z" />
-                    <circle cx="12" cy="12" r="2" />
-                </svg>
+                <img src="icons/wasd.png">
             </div>
         </div>
 
         <!-- Fly Icon -->
         <div id="fly" class="transform-icon" title="Fly">
-            <svg width="24px" height="24px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg">
-                <defs></defs>
-                <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                    <g id="Icon-Set-Filled" transform="translate(-310.000000, -309.000000)" fill="#000000">
-                        <path
-                            d="M341.207,309.82 C339.961,308.57 337.771,308.863 336.518,310.119 L330.141,316.481 L318.313,312.061 C317.18,311.768 316.039,311.389 314.634,312.798 C313.917,313.516 312.427,315.01 314.634,317.221 L322.744,323.861 L317.467,329.127 L312.543,327.896 C311.813,327.708 311.321,327.855 310.946,328.269 C310.757,328.505 309.386,329.521 310.342,330.479 L316.067,334.933 L320.521,340.658 C321.213,341.352 321.856,340.919 322.735,340.084 C323.292,339.526 323.172,339.239 323.004,338.426 L321.892,333.536 L327.133,328.277 L333.763,336.389 C335.969,338.6 337.46,337.105 338.177,336.389 C339.583,334.979 339.205,333.837 338.912,332.702 L334.529,320.854 L340.88,314.481 C342.133,313.226 342.454,311.069 341.207,309.82"
-                            id="airplane"></path>
-                    </g>
-                </g>
-
-            </svg>
+            <img src="icons/fly.png">
         </div>
 
         <!-- Transform Controls -->
         <div class="transform-controls">
             <div id="translateIcon" class="transform-icon" title="Translate">
-                <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="up-down-left-right"
-                    class="svg-inline--fa fa-up-down-left-right" role="img" xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 512 512">
-                    <path fill="currentColor"
-                        d="M512 256c0 6.797-2.891 13.28-7.938 17.84l-80 72C419.6 349.9 413.8 352 408 352c-3.312 0-6.625-.6875-9.766-2.078C389.6 346.1 384 337.5 384 328V288h-96v96l40-.0013c9.484 0 18.06 5.578 21.92 14.23s2.25 18.78-4.078 25.83l-72 80C269.3 509.1 262.8 512 255.1 512s-13.28-2.89-17.84-7.937l-71.1-80c-6.328-7.047-7.938-17.17-4.078-25.83s12.44-14.23 21.92-14.23l39.1 .0013V288H128v40c0 9.484-5.578 18.06-14.23 21.92C110.6 351.3 107.3 352 104 352c-5.812 0-11.56-2.109-16.06-6.156l-80-72C2.891 269.3 0 262.8 0 256s2.891-13.28 7.938-17.84l80-72C95 159.8 105.1 158.3 113.8 162.1C122.4 165.9 128 174.5 128 184V224h95.1V128l-39.1-.0013c-9.484 0-18.06-5.578-21.92-14.23S159.8 94.99 166.2 87.94l71.1-80c9.125-10.09 26.56-10.09 35.69 0l72 80c6.328 7.047 7.938 17.17 4.078 25.83s-12.44 14.23-21.92 14.23l-40 .0013V224H384V184c0-9.484 5.578-18.06 14.23-21.92c8.656-3.812 18.77-2.266 25.83 4.078l80 72C509.1 242.7 512 249.2 512 256z">
-                    </path>
-                </svg>
+                <img src="icons/transform.png">
             </div>
             <div id="rotateIcon" class="transform-icon" title="Rotate">
-                <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="rotate"
-                    class="svg-inline--fa fa-rotate" role="img" xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 512 512">
-                    <path fill="currentColor"
-                        d="M449.9 39.96l-48.5 48.53C362.5 53.19 311.4 32 256 32C161.5 32 78.59 92.34 49.58 182.2c-5.438 16.81 3.797 34.88 20.61 40.28c16.97 5.5 34.86-3.812 40.3-20.59C130.9 138.5 189.4 96 256 96c37.96 0 73 14.18 100.2 37.8L311.1 178C295.1 194.8 306.8 223.4 330.4 224h146.9C487.7 223.7 496 215.3 496 204.9V59.04C496 34.99 466.9 22.95 449.9 39.96zM441.8 289.6c-16.94-5.438-34.88 3.812-40.3 20.59C381.1 373.5 322.6 416 256 416c-37.96 0-73-14.18-100.2-37.8L200 334C216.9 317.2 205.2 288.6 181.6 288H34.66C24.32 288.3 16 296.7 16 307.1v145.9c0 24.04 29.07 36.08 46.07 19.07l48.5-48.53C149.5 458.8 200.6 480 255.1 480c94.45 0 177.4-60.34 206.4-150.2C467.9 313 458.6 294.1 441.8 289.6z">
-                    </path>
-                </svg>
+                <img src="icons/rotate.png">
             </div>
             <div id="scaleIcon" class="transform-icon" title="Scale">
-                <svg aria-hidden="true" focusable="false" data-prefix="fas"
-                    data-icon="up-right-and-down-left-from-center"
-                    class="svg-inline--fa fa-up-right-and-down-left-from-center" role="img"
-                    xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                    <path fill="currentColor"
-                        d="M208 281.4c-12.5-12.5-32.76-12.5-45.26-.002l-78.06 78.07l-30.06-30.06c-6.125-6.125-14.31-9.367-22.63-9.367c-4.125 0-8.279 .7891-12.25 2.43c-11.97 4.953-19.75 16.62-19.75 29.56v135.1C.0013 501.3 10.75 512 24 512h136c12.94 0 24.63-7.797 29.56-19.75c4.969-11.97 2.219-25.72-6.938-34.87l-30.06-30.06l78.06-78.07c12.5-12.49 12.5-32.75 .002-45.25L208 281.4zM487.1 0h-136c-12.94 0-24.63 7.797-29.56 19.75c-4.969 11.97-2.219 25.72 6.938 34.87l30.06 30.06l-78.06 78.07c-12.5 12.5-12.5 32.76 0 45.26l22.62 22.62c12.5 12.5 32.76 12.5 45.26 0l78.06-78.07l30.06 30.06c9.156 9.141 22.87 11.84 34.87 6.937C504.2 184.6 512 172.9 512 159.1V23.1C512 10.74 501.3 0 487.1 0z">
-                    </path>
-                </svg>
+                <img src="icons/scale.png">
             </div>
         </div>
     </div>
@@ -1229,33 +1324,60 @@
     </div>
 
     <div id="tooltip-panel" class="panel">
-        <h2>Tooltip options</h2>
+        <h2>Create Tooltip</h2>
         <label>Tooltip text: </label>
-        <input type="text" id="tooltip-input" placeholder="Tooltip text...">
-        <label>Align text: </label>
-        <select id="align-input">
-            <option value="left">Left</option>
-            <option value="center">Center</option>
-            <option value="right">Right</option>
-            <option value="justify">Justify</option>
-        </select>
-        <label>Font size: </label>
-        <input type="number" id="font-size-input" placeholder="Font size..." step="0.1" min="0" max="10">
-        <label>Font color: </label>
-        <input type="color" id="color-input" placeholder="Font color...">
-        <label>Font opacity: </label>
-        <input type="number" id="fill-opacity-input" placeholder="Fill opacity..." step="0.1" min="0" max="1">
+        <textarea id="tooltip-input" placeholder="Tooltip text..." rows="4" cols="50"></textarea>
+        <div id="align-input" class="align-icons">
+            <div class="align-icon" data-value="left" title="Left Align">
+                <img src="icons/left-align.png" alt="Left Align">
+            </div>
+            <div class="align-icon" data-value="center" title="Center Align">
+                <img src="icons/center-align.png" alt="Center Align">
+            </div>
+            <div class="align-icon" data-value="right" title="Right Align">
+                <img src="icons/right-align.png" alt="Right Align">
+            </div>
+            <div class="align-icon" data-value="justify" title="Justify Align">
+                <img src="icons/justify-align.png" alt="Justify Align">
+            </div>
+            <div class="align-icon">
+                <img src="icons/color.png" alt="Color Picker" id="color-picker-icon">
+                <input type="color" id="color-input" style="display: none;">
+            </div>
+        </div>
+        <div id="font-other">
+            <div class="input-group">
+                <label>Size:</label>
+                <input type="number" id="font-size-input" placeholder="Size..." step="0.1" min="0" max="10">
+            </div>
+            <div class="input-group">
+                <label>Height:</label>
+                <input type="number" id="line-height-input" placeholder="Height...">
+            </div>
+            <div class="input-group">
+                <label>Spacing:</label>
+                <input type="number" id="letter-spacing-input" placeholder="Spacing..." step="0.1" min="0" max="10">
+            </div>
+        </div>
+        <div id="font-other2">
+            <div class="input-group">
+                <label>Opacity:</label>
+                <input type="number" id="fill-opacity-input" placeholder="Opacity..." step="0.1" min="0" max="1">
+            </div>
+            <div class="input-group">
+                <label>Max width:</label>
+                <input type="number" id="max-width-input" placeholder="Max width..." step="0.1" min="0" max="5">
+            </div>
+        </div>
+
         <label>Custom font URL: </label>
         <input type="text" id="font-input" placeholder="Custom font URL...">
-        <label>Letter spacing: </label>
-        <input type="number" id="letter-spacing-input" placeholder="Letter spacing...">
-        <label>Line height: </label>
-        <input type="number" id="line-height-input" placeholder="Line height...">
-        <label>Font max width: </label>
-        <input type="number" id="max-width-input" placeholder="Font max width...">
 
         <br>
-        <button id="submit-tooltip">Create</button> <button id="deleteButton">Delete</button>
+        <div class="button-container">
+            <button id="submit-tooltip">Create</button>
+            <button id="deleteButton">Delete</button>
+        </div>
     </div>
 
     <!-- Camera panel -->
