--- a/3d_story_creator/index2.html
+++ b/3d_story_creator/index2.html
@@ -12,9 +12,10 @@
     <script src="https://unpkg.com/aframe-troika-text/dist/aframe-troika-text.min.js"></script>
 
     <style>
-        #tooltip-panel > label {
+        #tooltip-panel>label {
             font-size: 16px;
         }
+
         .input-row {
             display: flex;
             gap: 10px;
@@ -23,13 +24,7 @@
             /* Space between rows */
         }
 
-        .input-row input,
-        #positionX,
-        #positionY,
-        #positionZ,
-        #rotationX,
-        #rotationY,
-        #rotationZ {
+        .input-row input {
             width: 60px;
             /* Adjust width as needed */
             padding: 8px;
@@ -62,7 +57,7 @@
         textarea,
         .panel select {
             width: 250px;
-            margin: 10px 0;
+            margin: 10px 0px;
             padding: 8px;
             font-size: 14px;
             border: 1px solid #ccc;
@@ -1096,26 +1091,30 @@
             // Create the model container entity dynamically
             let modelContainer = document.createElement('a-entity');
             modelContainer.setAttribute('id', 'model-container');
+            modelContainer.setAttribute('geometry', {
+                primitive: 'box',
+                width: 5,
+                height: 5,
+                depth: 5
+            });
+            modelContainer.setAttribute('material', {
+                color: 'white', // You can set any color you want for the frame
+                wireframe: true, // This makes the box invisible but shows its frame
+                transparent: true,
+                opacity: 0 // This makes the box itself completely transparent
+            });
             document.querySelector('a-scene').appendChild(modelContainer);
 
             // Get reference to the file input
             let fileInput = document.getElementById('gltf-loader');
 
 
-            // Get references to the position and rotation inputs
-            const positionX = document.getElementById('positionX');
-            const positionY = document.getElementById('positionY');
-            const positionZ = document.getElementById('positionZ');
 
-            const rotationX = document.getElementById('rotationX');
-            const rotationY = document.getElementById('rotationY');
-            const rotationZ = document.getElementById('rotationZ');
 
-            // Function to update position
-            function updatePosition() {
-                const x = parseFloat(positionX.value) || 0;
-                const y = parseFloat(positionY.value) || 0;
-                const z = parseFloat(positionZ.value) || 0;
+
+
+            document.addEventListener("objectPositionUpdate", (event) => {
+                const { x, y, z } = event.detail;
 
                 // Update the position of the last added entity
                 const entities = modelContainer.querySelectorAll('a-entity');
@@ -1123,13 +1122,11 @@
                     const lastEntity = entities[entities.length - 1];
                     lastEntity.setAttribute('position', { x, y, z });
                 }
-            }
+            });
 
             // Function to update rotation
-            function updateRotation() {
-                const x = parseFloat(rotationX.value) || 0;
-                const y = parseFloat(rotationY.value) || 0;
-                const z = parseFloat(rotationZ.value) || 0;
+            document.addEventListener("objectRotationUpdate", (event) => {
+                const { x, y, z } = event.detail;
 
                 // Update the rotation of the last added entity
                 const entities = modelContainer.querySelectorAll('a-entity');
@@ -1137,18 +1134,11 @@
                     const lastEntity = entities[entities.length - 1];
                     lastEntity.setAttribute('rotation', { x, y, z });
                 }
-            }
+            });
 
-            // Add event listeners to position inputs
-            positionX.addEventListener('input', updatePosition);
-            positionY.addEventListener('input', updatePosition);
-            positionZ.addEventListener('input', updatePosition);
 
-            // Add event listeners to rotation inputs
-            rotationX.addEventListener('input', updateRotation);
-            rotationY.addEventListener('input', updateRotation);
-            rotationZ.addEventListener('input', updateRotation);
-            // Existing file input event listener
+
+
             fileInput.addEventListener('change', function (event) {
                 const files = event.target.files;
 
@@ -1161,17 +1151,8 @@
                             // Create a new Gaussian Splatting entity
                             const splatEntity = document.createElement('a-entity');
                             splatEntity.setAttribute('gaussian-splatting', `src: ${url}`);
-                            splatEntity.setAttribute('position', {
-                                x: parseFloat(positionX.value) || 0,
-                                y: parseFloat(positionY.value) || 0,
-                                z: parseFloat(positionZ.value) || 0
-                            });
-                            splatEntity.setAttribute('rotation', {
-                                x: parseFloat(rotationX.value) || 0,
-                                y: parseFloat(rotationY.value) || 0,
-                                z: parseFloat(rotationZ.value) || 0
-                            });
 
+                            console.log(splatEntity.object3D)
                             // Add the splat entity to the scene
                             modelContainer.appendChild(splatEntity);
 
@@ -1307,20 +1288,7 @@
         <input type="file" id="gltf-loader" accept=".gltf,.glb,.splat" multiple>
 
         <!-- Position Input -->
-        <label>Position:</label>
-        <div class="input-row">
-            <input type="number" id="positionX" placeholder="X" value="0" step="0.1">
-            <input type="number" id="positionY" placeholder="Y" value="0" step="0.1">
-            <input type="number" id="positionZ" placeholder="Z" value="0" step="0.1">
-        </div>
 
-        <!-- Rotation Input -->
-        <label>Rotation:</label>
-        <div class="input-row">
-            <input type="number" id="rotationX" placeholder="X" value="0" step="10">
-            <input type="number" id="rotationY" placeholder="Y" value="0" step="10">
-            <input type="number" id="rotationZ" placeholder="Z" value="0" step="10">
-        </div>
     </div>
 
     <div id="tooltip-panel" class="panel">
