--- a/3d_story_creator/index2.html
+++ b/3d_story_creator/index2.html
@@ -1303,7 +1303,7 @@
             });
 
             document.getElementById('preloadGLTF').addEventListener('click', function () {
-                const url = 'forrest_house.glb'; // Update this path to the correct location of sample.gltf
+                const url = 'forest_house.glb'; // Update this path to the correct location of sample.gltf
 
                 // Create a new GLTF model entity
                 const model = document.createElement('a-entity');
