Added 2 new post-processing effects

--- a/3d_story_creator/index2.html
+++ b/3d_story_creator/index2.html
@@ -1543,6 +1543,8 @@ AFRAME.registerPrimitive("a-grid", {
             <option value="volumetric-light">Volumetric Light</option>
             <option value="afterimage">Afterimage</option>
             <option value="bad-tv">Bad TV</option>
+            <option value="custom-outline">Custom Outline</option>
+            <option value="moebius">Moebius</option>
           </select>
           
           <div id="effect-params"></div>
